syntax = "proto3";
package com.bulletinboard;
option java_multiple_files = true;

// Implement ProtoFile Here

message messageRequest{
	string message = 1;
}

message messageResponse{
	repeated string message = 1;
}

service BulletinBoard{
	rpc processMessage(messageRequest) returns (messageResponse);
}